--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
     <title>Eric Durand | Web Developer</title>
     <meta name="keywords" content="[username], [name], skill" />
    
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Eric Durand | Developer" />
 
     <!-- Required librarys -->
     <link
