--- a/src/template.html
+++ b/src/template.html
@@ -779,13 +779,13 @@
                     This exercise is my first web app created using React!
                     The web app was created using just 4 components: a card component, a cardlist component, a scroll component, and a search box component.
                     The card component is used to display user information (name and e-mail)
-                    The user information for the card was fetched from a json placholder file (https://jsonplaceholder.typicode.com/users).
-                    The user images were retrieved from a free third part image app and populated into the card component.
+                    The user information for the card was fetched from a json Object.
+                    The user images were retrieved from a free third party image app and populated into the card component.
                     The user information and images are part of the cardlist component.  When the app is rendered and the components mounts, 
                     it fetchs the and loops over the information from the placeholder for the cardlist, adding data into an empty array.  That empty array will dynamically become
                     our user cards. The search box component is an input box that uses the app's state to search through the props to filter the robots array to see if it includes 
                     the value currently in the input box.
-                    The scroll component is a functional component that wraps our card to keep the information in the center of the screen and the search box on top
+                    The scroll component is a functional component that wraps our card to keep the information in the center of the screen and the search box on top.
 
                   </p>
                 </div>
